--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'maven'
 
-group 'cz.craftmania.template'
+group 'cz.nerdy.craftchat'
 version '1.0.0'
 
 sourceCompatibility = 1.8
@@ -26,9 +26,15 @@ repositories {
 }
 
 dependencies {
-    compileOnly ('org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT') {
+    compileOnly ('org.spigotmc:spigot-api:1.14.4-R0.1-SNAPSHOT') {
         exclude group: 'net.md-5'
     }
+
+    // CM Plugins
+    compileOnly group: 'cz.craftmania.craftcore', name: 'craftcore', version: '2.2.1'
+    compileOnly group: 'cz.craftmania.craftlibs', name: 'craflibs', version: '1.0.1'
+
+
 }
 
 task compilePlugin(type: Jar) {
