--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     compileOnly name: 'spigot-1.14.4'
 
     // CM Plugins
-    compileOnly group: 'cz.craftmania.craftcore', name: 'craftcore', version: '2.2.1'
+    compileOnly group: 'cz.craftmania.craftcore', name: 'craftcore', version: '2.2.3'
+    compileOnly group: 'cz.craftmania.craftlibs', name: 'craftlibs', version: '1.0.3'
 
 
 }
