Úpravy, getování tagů z db

--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,11 @@ dependencies {
     compileOnly name: 'spigot-1.14.4'
 
     // CM Plugins
-    compileOnly group: 'cz.craftmania.craftcore', name: 'craftcore', version: '2.2.3'
+    compileOnly group: 'cz.craftmania.craftcore', name: 'craftcore', version: '2.2.6'
     compileOnly group: 'cz.craftmania.craftlibs', name: 'craftlibs', version: '1.0.3'
+    compileOnly group: 'cz.craftmania.crafteconomy', name: 'crafteconomy', version: '1.2.4'
 
+    compile 'net.luckperms:api:5.0'
 
 }
 
