--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: CraftChat
 version: 1.0.0
 author: Nerdy42
 main: cz.nerdy.craftchat.Main
-depend: [CraftLibs]
+depend: [CraftLibs, PlaceholderAPI]
 api-version: 1.13
 
 commands:
