Ignorování hráčů, úprava SQL dotazů

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,5 @@ api-version: 1.13
 commands:
  tags:
    description: "Zobrazi všechny tagy, které jsou k dispozici"
+ ignore:
+   description: "Ignore command"
