--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,3 +15,96 @@ formats:
       - '&a&lMoney: &f{money_formatted}&a$'
     name_click_command: '/pm %player_name%'
     allow_tag_change: true # zakazani zmeny tagu
+
+# Regexy pro blokovane tagy
+blocked-tags:
+  - \b(s+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*c+(\W|\d|_)*k+(\W|\d|_)*y+(\W|\d|_)*)
+  - \b(v+(\W|\d|_)*o+(\W|\d|_)*l+(\W|\d|_)*e+(\W|\d|_)*)
+  - \b(f+(\W|\d|_)*u+(\W|\d|_)*c+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*i+(\W|\d|_)*c+(\W|\d|_)*e+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*i+(\W|\d|_)*c+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*í+(\W|\d|_)*č+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*y+(\W|\d|_)*c+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*i+(\W|\d|_)*č+(\W|\d|_)*)
+  - \b(d+(\W|\d|_)*e+(\W|\d|_)*v+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(d+(\W|\d|_)*ě+(\W|\d|_)*v+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(v+(\W|\d|_)*a+(\W|\d|_)*g+(\W|\d|_)*i+(\W|\d|_)*n+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*e+(\W|\d|_)*n+(\W|\d|_)*i+(\W|\d|_)*s+(\W|\d|_)*)
+  - \b(d+(\W|\d|_)*ě+(\W|\d|_)*f+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(b+(\W|\d|_)*a+(\W|\d|_)*s+(\W|\d|_)*t+(\W|\d|_)*a+(\W|\d|_)*r+(\W|\d|_)*d+(\W|\d|_)*)
+  - \b(d+(\W|\d|_)*e+(\W|\d|_)*f+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*v+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*w+(\W|\d|_)*)
+  - \b(z+(\W|\d|_)*m+(\W|\d|_)*r+(\W|\d|_)*d+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*r+(\W|\d|_)*e+(\W|\d|_)*t+(\W|\d|_)*e+(\W|\d|_)*n+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*r+(\W|\d|_)*e+(\W|\d|_)*t+(\W|\d|_)*é+(\W|\d|_)*n+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*h+(\W|\d|_)*i+(\W|\d|_)*t+(\W|\d|_)*)
+  - \b(d+(\W|\d|_)*e+(\W|\d|_)*b+(\W|\d|_)*i+(\W|\d|_)*l+(\W|\d|_)*)
+  - \b(d+(\W|\d|_)*e+(\W|\d|_)*b+(\W|\d|_)*y+(\W|\d|_)*l+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*y+(\W|\d|_)*c+(\W|\d|_)*o+(\W|\d|_)*)
+  - \b(b+(\W|\d|_)*i+(\W|\d|_)*t+(\W|\d|_)*c+(\W|\d|_)*h+(\W|\d|_)*)
+  - \b(m+(\W|\d|_)*a+(\W|\d|_)*m+(\W|\d|_)*r+(\W|\d|_)*d+(\W|\d|_)*)
+  - \b(b+(\W|\d|_)*u+(\W|\d|_)*z+(\W|\d|_)*e+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*n+(\W|\d|_)*t+(\W|\d|_)*)
+  - \b(b+(\W|\d|_)*a+(\W|\d|_)*z+(\W|\d|_)*e+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*n+(\W|\d|_)*t+(\W|\d|_)*)
+  - \b(c+(\W|\d|_)*u+(\W|\d|_)*b+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(č+(\W|\d|_)*u+(\W|\d|_)*b+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(d+(\W|\d|_)*e+(\W|\d|_)*m+(\W|\d|_)*e+(\W|\d|_)*n+(\W|\d|_)*t+(\W|\d|_)*)
+  - \b(i+(\W|\d|_)*d+(\W|\d|_)*i+(\W|\d|_)*o+(\W|\d|_)*t+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*o+(\W|\d|_)*k+(\W|\d|_)*o+(\W|\d|_)*t+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*p+(\W|\d|_)*e+(\W|\d|_)*r+(\W|\d|_)*m+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*o+(\W|\d|_)*n+(\W|\d|_)*o+(\W|\d|_)*m+(\W|\d|_)*r+(\W|\d|_)*d+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*o+(\W|\d|_)*ň+(\W|\d|_)*o+(\W|\d|_)*m+(\W|\d|_)*r+(\W|\d|_)*d+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*u+(\W|\d|_)*n+(\W|\d|_)*d+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*u+(\W|\d|_)*n+(\W|\d|_)*d+(\W|\d|_)*o+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*u+(\W|\d|_)*n+(\W|\d|_)*d+(\W|\d|_)*y+(\W|\d|_)*)
+  - \b(r+(\W|\d|_)*e+(\W|\d|_)*t+(\W|\d|_)*a+(\W|\d|_)*r+(\W|\d|_)*d+(\W|\d|_)*)
+  - \b(a+(\W|\d|_)*n+(\W|\d|_)*a+(\W|\d|_)*l+(\W|\d|_)*)
+  - \b(a+(\W|\d|_)*n+(\W|\d|_)*á+(\W|\d|_)*l+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*c+(\W|\d|_)*k+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*č+(\W|\d|_)*k+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*u+(\W|\d|_)*k+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(š+(\W|\d|_)*u+(\W|\d|_)*k+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(j+(\W|\d|_)*e+(\W|\d|_)*b+(\W|\d|_)*a+(\W|\d|_)*t+(\W|\d|_)*)
+  - \b(c+(\W|\d|_)*h+(\W|\d|_)*u+(\W|\d|_)*j+(\W|\d|_)*)
+  - \b(b+(\W|\d|_)*u+(\W|\d|_)*z+(\W|\d|_)*n+(\W|\d|_)*)
+  - \b(c+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(č+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(c+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*á+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(č+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*á+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(c+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(č+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(č+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*á+(\W|\d|_)*)
+  - \b(m+(\W|\d|_)*r+(\W|\d|_)*d+(\W|\d|_)*k+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(m+(\W|\d|_)*r+(\W|\d|_)*d+(\W|\d|_)*k+(\W|\d|_)*y+(\W|\d|_)*)
+  - \b(m+(\W|\d|_)*r+(\W|\d|_)*d+(\W|\d|_)*k+(\W|\d|_)*o+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*v+(\W|\d|_)*i+(\W|\d|_)*n+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*v+(\W|\d|_)*i+(\W|\d|_)*ň+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*v+(\W|\d|_)*y+(\W|\d|_)*n+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*n+(\W|\d|_)*c+(\W|\d|_)*)
+  - \b(d+(\W|\d|_)*i+(\W|\d|_)*c+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(z+(\W|\d|_)*o+(\W|\d|_)*z+(\W|\d|_)*n+(\W|\d|_)*a+(\W|\d|_)*m+(\W|\d|_)*k+(\W|\d|_)*)
+  - \b(v+(\W|\d|_)*y+(\W|\d|_)*j+(\W|\d|_)*e+(\W|\d|_)*b+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(z+(\W|\d|_)*a+(\W|\d|_)*j+(\W|\d|_)*e+(\W|\d|_)*b+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(d+(\W|\d|_)*o+(\W|\d|_)*j+(\W|\d|_)*e+(\W|\d|_)*b+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*o+(\W|\d|_)*j+(\W|\d|_)*e+(\W|\d|_)*b+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(h+(\W|\d|_)*o+(\W|\d|_)*v+(\W|\d|_)*n+(\W|\d|_)*o+(\W|\d|_)*)
+  - \b(h+(\W|\d|_)*o+(\W|\d|_)*v+(\W|\d|_)*n+(\W|\d|_)*a+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*i+(\W|\d|_)*c+(\W|\d|_)*o+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*i+(\W|\d|_)*č+(\W|\d|_)*e+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*í+(\W|\d|_)*č+(\W|\d|_)*e+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*i+(\W|\d|_)*č+(\W|\d|_)*u+(\W|\d|_)*s+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*i+(\W|\d|_)*c+(\W|\d|_)*u+(\W|\d|_)*s+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*i+(\W|\d|_)*č+(\W|\d|_)*u+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*i+(\W|\d|_)*c+(\W|\d|_)*u+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*r+(\W|\d|_)*a+(\W|\d|_)*c+(\W|\d|_)*k+(\W|\d|_)*y+(\W|\d|_)*)
+  - \b(s+(\W|\d|_)*k+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*v+(\W|\d|_)*e+(\W|\d|_)*n+(\W|\d|_)*)
+  - \b(z+(\W|\d|_)*k+(\W|\d|_)*u+(\W|\d|_)*r+(\W|\d|_)*v+(\W|\d|_)*e+(\W|\d|_)*n+(\W|\d|_)*)
+  - \b(k+(\W|\d|_)*u+(\W|\d|_)*n+(\W|\d|_)*d+(\W|\d|_)*)
+  - \b(p+(\W|\d|_)*u+(\W|\d|_)*s+(\W|\d|_)*s+(\W|\d|_)*)
+  - \b(v+(\W|\d|_)*i+(\W|\d|_)*p+(\W|\d|_)*)
+  - \b(h+(\W|\d|_)*e+(\W|\d|_)*l+(\W|\d|_)*p+(\W|\d|_)*e+(\W|\d|_)*r+(\W|\d|_)*)
+  - \b(a+(\W|\d|_)*d+(\W|\d|_)*m+(\W|\d|_)*i+(\W|\d|_)*n+(\W|\d|_)*)
+  - \b(b+(\W|\d|_)*u+(\W|\d|_)*i+(\W|\d|_)*l+(\W|\d|_)*d+(\W|\d|_)*e+(\W|\d|_)*r+(\W|\d|_)*)
+  - \b(e+(\W|\d|_)*v+(\W|\d|_)*e+(\W|\d|_)*n+(\W|\d|_)*t+(\W|\d|_)*e+(\W|\d|_)*r+(\W|\d|_)*)
+  - \b(m+(\W|\d|_)*a+(\W|\d|_)*j+(\W|\d|_)*i+(\W|\d|_)*t+(\W|\d|_)*e+(\W|\d|_)*l+(\W|\d|_)*)
+  - \b(o+(\W|\d|_)*w+(\W|\d|_)*n+(\W|\d|_)*e+(\W|\d|_)*r+(\W|\d|_)*)
