Oprava načítání pluginu

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,8 +2,9 @@ name: CraftChat
 version: 1.0.0
 author: Nerdy42
 main: cz.nerdy.craftchat.Main
-depend: [CraftLibs, PlaceholderAPI]
-api-version: 1.13
+depend: [CraftLibs, PlaceholderAPI, CraftCore]
+softdepend: [CraftEconomy]
+api-version: "1.13"
 
 commands:
  tags:
