--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     }
     compileOnly name: 'spigot-1.14.4'
     compileOnly name: 'spigot-1.15.2'
+    compileOnly name: 'spigot-1.12.2'
     compileOnly name: 'PlaceholderAPI-2.10.4'
 
     // CM Plugins
