--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,3 +11,5 @@ commands:
    description: "Zobrazi všechny tagy, které jsou k dispozici"
  ignore:
    description: "Ignore command"
+ chatcolor:
+   description: "Změna barvy"
