--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,11 @@ repositories {
 }
 
 dependencies {
-    compileOnly ('org.spigotmc:spigot-api:1.14.4-R0.1-SNAPSHOT') {
+    compileOnly('org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT') {
         exclude group: 'net.md-5'
     }
+
+    compileOnly name: 'spigot-1.16.1'
     compileOnly name: 'spigot-1.14.4'
     compileOnly name: 'spigot-1.15.2'
     compileOnly name: 'spigot-1.16.1'
