Oprava RGB u prefixu + podpora RGB pro suffix

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,7 +6,8 @@ formats:
     priority: 14
     prefix_color: GRAY # barva prefixu i tagu
     name_color: LIGHT_GRAY # barva jmena
-    suffix: ' &8» ' # suffix za jmenem
+    suffix_color: GRAY # barva suffixu
+    suffix: '»' # suffix za jmenem
     chat_color: WHITE
     prefix_tooltip:
       - '&7&lZakladni rank'
