--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,20 @@ repositories {
             password = GPR_TOKEN
         }
     }
+    maven {
+        url "https://maven.pkg.github.com/craftmania-cz/craftlibs"
+        credentials {
+            username = GPR_USER
+            password = GPR_TOKEN
+        }
+    }
+    maven {
+        url "https://maven.pkg.github.com/craftmania-cz/crafteconomy"
+        credentials {
+            username = GPR_USER
+            password = GPR_TOKEN
+        }
+    }
 }
 
 dependencies {
@@ -45,9 +59,9 @@ dependencies {
     compileOnly name: 'spigot-1.17'
 
     // CM Plugins
-    compileOnly group: 'cz.craftmania.craftcore', name: 'craftcore', version: '2.6.1-beta'
-    compileOnly group: 'cz.craftmania.craftlibs', name: 'craftlibs', version: '1.0.5'
-    compileOnly group: 'cz.craftmania.crafteconomy', name: 'crafteconomy', version: '1.2.4'
+    compileOnly group: 'cz.craftmania.craftcore', name: 'craftcore', version: '2.6.2.1'
+    compileOnly group: 'cz.craftmania.craftlibs', name: 'craftlibs', version: '1.1.9'
+    compileOnly group: 'cz.craftmania.crafteconomy', name: 'crafteconomy', version: '1.5.2'
 
     // Commands
     implementation 'co.aikar:acf-paper:0.5.0-SNAPSHOT'
