--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 apply plugin: 'java'
 
 group 'cz.nerdy.craftchat'
-version '1.1.5-beta'
+version '1.1.6'
 
 sourceCompatibility = 16
 targetCompatibility = 16
