--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 apply plugin: 'java'
 
 group 'cz.nerdy.craftchat'
-version '1.2.0'
+version '2.0.0'
 
 sourceCompatibility = 17
 targetCompatibility = 17
@@ -56,6 +56,9 @@ dependencies {
     compileOnly group: 'me.clip', name: 'placeholderapi', version: '2.10.9'
     compileOnly 'net.luckperms:api:5.4'
     implementation 'org.jetbrains:annotations:23.0.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
 }
 
