--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
 
 apply plugin: 'java'
 
-group 'cz.nerdy.craftchat'
-version '2.0.0'
+group 'cz.craftmania.craftchat'
+version '2.0.0-BETA'
 
 sourceCompatibility = 17
 targetCompatibility = 17
@@ -59,8 +59,8 @@ dependencies {
 }
 
 shadowJar {
-    relocate 'co.aikar.commands', 'cz.nerdy.craftchat.acf'
-    relocate 'co.aikar.locales', 'cz.nerdy.craftchat.locales'
+    relocate 'co.aikar.commands', 'cz.craftmania.craftchat.acf'
+    relocate 'co.aikar.locales', 'cz.craftmania.craftchat.locales'
 }
 
 build.dependsOn shadowJar
